Fix media element position on MediaDocument

The element should be centered
Adding back media/media-document-audio-repaint.html which is accidentally removed.
And rebaseline the text expectation so it can capture future regressions.

BUG=760484

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: If7fded84745f1a6a04feab9a7b6c3d237b08c301
Reviewed-on: https://chromium-review.googlesource.com/646526
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499149}
Former-commit-id: f628f1cfaf8aa160417049718324d6c2023142f7